<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/toolbar_f_nfc_btn_back"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:padding="12dp"
            android:background="@color/purple_500"
            android:contentDescription="@string/back_hint"
            android:scaleType="fitCenter"
            android:src="@drawable/backbtn" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_f_nfc"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

        </androidx.appcompat.widget.Toolbar>

    </LinearLayout>

    <Button
        android:id="@+id/btn_start_hce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:padding="10dp"
        android:focusable="false"
        android:text="@string/start_hce"
        android:textColor="#ffffff"
        android:textSize="20sp" />
    <Button
        android:id="@+id/btn_stop_hce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:padding="10dp"
        android:focusable="false"
        android:text="@string/stop_hce"
        android:textColor="#ffffff"
        android:textSize="20sp" />
    <Button
        android:id="@+id/btn_scan_nfc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:padding="10dp"
        android:focusable="false"
        android:text="@string/scan_nfc"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/warning"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_margin="15dp"/>

    </LinearLayout>

</LinearLayout>