<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_c"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/toolbar_btn_c"
                android:layout_alignParentLeft="true"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:background="@color/purple_500"
                android:contentDescription="@string/back_hint"
                android:src="@drawable/backbtn" />

            <TextView
                android:id="@+id/toolbar_text_c"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:layout_toRightOf="@id/toolbar_btn_c"
                android:text="@string/tootbar_text_c"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/toolbar_btn_reflesh"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:background="@color/purple_500"
                android:contentDescription="@string/back_hint"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/refleshbtn" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <ListView
        android:id="@+id/lv_msg_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="#00000000"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65dp">

        <View
            android:id="@+id/v_c_separe"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_alignTop="@id/ll_c_bottom"
            android:background="?attr/colorPrimary" />

        <LinearLayout
            android:id="@+id/ll_c_bottom"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true">

            <EditText
                android:id="@+id/et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/et_hint"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/purple_500"
                android:contentDescription="@string/btn_send"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:src="@drawable/sendbtn" />

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>